ensure dropdown text isn't overlapping in IE

--- a/src/components/utilities/tooltip/tooltip.scss
+++ b/src/components/utilities/tooltip/tooltip.scss
@@ -15,7 +15,6 @@
   transition: opacity 0.3s ease-out;
   z-index: 2147483647;
   a {
-    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
